Code cleanup (#352)
* Update Helm configuration

* Code clean-up